# fastapitest

./: .env  .gitignore  config.py  main.py  pyproject.toml
apps/: config.py  crud.py  database.py  main.py  schemas.py
apps/auth/: auth.py  manager.py
apps/chat/: router.py
apps/models/: __init__.py
migrations/: env.py
migrations/versions/: 248f44913616_add_username.py  3dd494ef422f_initial.py
src/: crud.py  database.py  schemas.py
src/auth/: auth.py  manager.py  schemas.py
src/models/: models.py
