[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["Averniko <averniko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2 = "^2.9.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
