[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["Averniko <averniko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
flake8-builtins = "^2.2.0"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
